@@ -377,7 +377,7 @@ require_once('LanguageUtf8.php');
 'orphans' => 'الصفحات اليتيمة',
 'otherlanguages' => ' لغات أخرى',
 'pagemovedsub' => 'تم النقل بنجاح',
-'pagemovedtext' => 'تم نقل الصفحة "[[$1]]" إلى "[[$2]]".',
+'pagemovedtext' => 'تم نقل الصفحة "$1" إلى "$2".',
 'passwordremindertitle' => 'تذكير بكلمة السر من ويكيبيديا',
 'passwordsent' => 'تم إرسال كلمة سر جديدة إلى العنوان البريدي المسجل للمستخدم "$1".
 يرجى محاولة تسجيل الدخول مرة أخرى عند إستلامها.',
